refactor: post 기능 size, page 처리 추가 및 responseCode 400 추가